[gd_scene load_steps=16 format=2]

[ext_resource path="res://Graphics/Buildings/GH.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Buildings/MM.png" type="Texture" id=4]
[ext_resource path="res://Scenes/CloseButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=6]
[ext_resource path="res://Scripts/TerraformPanel.gd" type="Script" id=7]
[ext_resource path="res://Graphics/Buildings/ME.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Buildings/MS.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Buildings/AE.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Buildings/PP.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Buildings/RL.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Buildings/SPR.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Buildings/AMN.png" type="Texture" id=14]

[sub_resource type="Theme" id=1]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="InputEventAction" id=2]
action = "G"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="TerraformPanel" type="Panel"]
margin_right = 1067.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 533, 300 )
theme = ExtResource( 6 )
script = ExtResource( 7 )

[node name="CloseButton" parent="." instance=ExtResource( 5 )]

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 38 )
text = "TERRAFORM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="."]
margin_left = 24.0
margin_top = 48.0
margin_right = 1040.0
margin_bottom = 112.0
text = "TERRAFORM_DESC"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 24.0
margin_top = 112.0
margin_right = 384.0
margin_bottom = 576.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 459.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="MineralExtraction" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "MINERAL_EXTRACTION"
icon = ExtResource( 8 )
align = 0
expand_icon = true

[node name="EnergyProduction" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 350.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
text = "ENERGY_PRODUCTION"
icon = ExtResource( 11 )
align = 0
expand_icon = true

[node name="Research" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 350.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
text = "RESEARCH"
icon = ExtResource( 12 )
align = 0
expand_icon = true

[node name="MineralStorage2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 350.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )
text = "MINERAL_STORAGE"
icon = ExtResource( 9 )
align = 0
expand_icon = true

[node name="AtmosphereExtraction" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 350.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 40 )
text = "ATMOSPHERE_EXTRACTION"
icon = ExtResource( 10 )
align = 0
expand_icon = true

[node name="Mining" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 350.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 40 )
text = "MINING"
icon = ExtResource( 4 )
align = 0
expand_icon = true

[node name="SpaceAgriculture" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 350.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 40 )
text = "SA_SC"
icon = ExtResource( 3 )
align = 0
expand_icon = true

[node name="AtomManipulation" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 350.0
margin_bottom = 348.0
rect_min_size = Vector2( 0, 40 )
text = "ATM_SC"
icon = ExtResource( 14 )
align = 0
expand_icon = true

[node name="SubatomicParticles" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 350.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 40 )
text = "SAP_SC"
icon = ExtResource( 13 )
align = 0
expand_icon = true

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 392.0
margin_top = 112.0
margin_right = 1040.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Label" parent="Panel"]
margin_left = 44.0
margin_top = 351.0
margin_right = 632.0
margin_bottom = 375.0
text = "PLANET_MINING_NOTE"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerraformingCosts" type="Label" parent="Panel"]
margin_left = 44.0
margin_top = 32.0
margin_right = 312.0
margin_bottom = 56.0
text = "TERRAFORMING_COSTS"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TCVBox" type="VBoxContainer" parent="Panel"]
margin_left = 36.0
margin_top = 64.0
margin_right = 76.0
margin_bottom = 104.0

[node name="BuildingCosts" type="Label" parent="Panel"]
margin_left = 48.0
margin_top = 192.0
margin_right = 636.0
margin_bottom = 216.0
text = "BUILDING_COSTS"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BCVBox" type="VBoxContainer" parent="Panel"]
margin_left = 36.0
margin_top = 228.0
margin_right = 76.0
margin_bottom = 268.0

[node name="CostMult" type="Label" parent="Panel"]
margin_left = 352.0
margin_top = 32.0
margin_right = 578.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terraform" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -36.0
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "TERRAFORM"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ScrollContainer/VBoxContainer/MineralExtraction" to="." method="_on_ME_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/EnergyProduction" to="." method="_on_PP_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Research" to="." method="_on_RL_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MineralStorage2" to="." method="_on_MS_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AtmosphereExtraction" to="." method="_on_AE_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Mining" to="." method="_on_MM_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/SpaceAgriculture" to="." method="_on_GH_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AtomManipulation" to="." method="_on_AMN_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/SubatomicParticles" to="." method="_on_SPR_pressed"]
[connection signal="pressed" from="Panel/Terraform" to="." method="_on_Terraform_pressed"]
